--- a/Gerrashoot/index.html
+++ b/Gerrashoot/index.html
@@ -147,7 +147,7 @@
 
 
 		<h1>Bienvenue sur le site Officiel du jeu Gerrashoot ! <br> Gerrashoot est un jeu-vidéo de platforme et de tir dans <br>
-		lequel vous devez démanteler une organisation criminelle <br> Vous devrez traversé leur QG en esquivant les pièges<br> contenus dans celle çi. 
+		lequel vous devez démanteler une organisation criminelle. <br> Vous devrez traversé leur QG en esquivant les pièges<br> contenus dans celle çi. 
 			Bonne chance.</h1>
 		<a href="https://lmc60.github.io/Gerranite.html"><button class="button">Aller sur la page Gerranite</button></a>
 
