--- a/Gerrashoot/index-English.html
+++ b/Gerrashoot/index-English.html
@@ -147,7 +147,7 @@
 
 
 		<h1>Welcome to the Official Gerrashoot Game Site! <br> Gerrashoot is a platform and shooter video game in <br>
-			which you must dismantle a criminal organization <br> You will have to cross their HQ dodging the traps<br> contained in this one.
+			which you must dismantle a criminal organization. <br> You will have to cross their HQ dodging the traps<br> contained in this one.
 			Good luck.</h1>
 		<a href="https://lmc60.github.io/Gerranite.html"><button class="button">Go to Gerranite page</button></a>
 
